data/derived/comb/progs/unify/prog3254.ml.out
Characters 91-92:
  List.fold_left f base fs;;
                 ^
Error: This expression has type 'a -> 'b -> 'c -> ('a -> 'd) -> 'd
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside 'c -> ('a -> 'd) -> 'd
